# cosmosIoT-Devices

./: .gitignore  LICENSE  README.md  test.c
.commonFiles/lib/cosmos_devices/: CMakeLists.txt  cosmos_devices.c  cosmos_devices.h
.commonFiles/lib/cosmos_light/: CMakeLists.txt  cosmos_light.c  cosmos_light.h
.commonFiles/lib/cosmos_power/: CMakeLists.txt  cosmos_power.c  cosmos_power.h
.commonFiles/lib/cosmos_pump/: CMakeLists.txt  cosmos_pump.c  cosmos_pump.h
.commonFiles/lib/cosmos_sensor/: CMakeLists.txt  cosmos_sensor.c  cosmos_sensor.cpp  (+1 more)
autonomousPetFeeder/: platformio.ini
autonomousPetFeeder/src/: feeder_local_control.c  main.c
autonomousPetFeeder/tasks/: feeder_local_control.h  pet_feeder_tasks_common.h
esp32CamServer/: CMakeLists.txt  references.MD  sdkconfig  sdkconfig.defaults.esp32  sdkconfig.old
esp32CamServer/main/: CMakeLists.txt  cam_task.c  door_intercom_task.cpp  evt_service_task.c  http_server_task.c  http_stream_task.c  idf_component.yml  main.c  main.cpp  matter_task.cpp  pir_detection_task.c  pir_sensor_task.cpp  security_module_task.cpp  test.cpp  wifi_task.c
esp32CamServer/tasks/: cam_task.h  door_intercom_task.h  evt_service_task.h  http_server_task.h  http_stream_task.h  matter_task.h  pir_detection_task.h  pir_sensor_task.h  security_module_task.h
homeAssistant/: README.md
homeAssistant/AI-Driven Irrigation with Matter + Home Assistant/: 1_export.sql  2_train_model.py  3_ha_deploy.py  4_execution_automate.yaml  classic_ha_automation.yaml  cm5_AI_hat_architecture.md  end_to_end_architecture.md  simple_ml_model.md
homeAssistant/configYaml/: automations.yaml  groups.yaml  influxdb.yaml  logbook.yaml  recorder.yaml
lilFlowerPal/: CMakeLists.txt  LICENSE  README.md  platformio.ini  sdkconfig  sdkconfig.old
lilFlowerPal/doc/: lcd_driver.c  lilFlowerPal_Log.txt  sample.c  soil_moisture_task.c
lilFlowerPal/main/: CMakeLists.txt  analog_sensor_task.cpp  bme680_task.cpp  encoder_task.cpp  idf_component.yml  lil_ui_task.cpp  lvgl_task.cpp  main.c  main.cpp  matter_task.cpp  pump_init.c  pump_task.cpp  soil_moisture_task.cpp
lilFlowerPal/main/qr_code/: .gitignore
lilFlowerPal/src/: bme680_task.c  lcd_driver.c  main.c  pump_init.c  soil_moisture_task.c
lilFlowerPal/tasks/: analog_sensor_task.h  bme680_task.h  encoder_task.h  lil_ui_task.h  lvgl_task.h  main_tasks_common.h  matter_task.h  pump_init.h  pump_task.h  soil_moisture_task.h
lilFlowerPal/test/: README.md
smartDesk/: CMakeLists.txt  platformio.ini  sdkconfig.newProject  sdkconfig.newProject.old
smartDesk/src/: CMakeLists.txt  dht22_read.c  encoder.c  main.c  mq135_read.c  pir_sensor.c  socket_local_control.c
smartDesk/tasks/: dht22_read.h  mq135_read.h  pir_sensor.h  smart_desk_tasks_common.h  socket_local_control.h
spiram_isr_test/: CMakeLists.txt
spiram_isr_test/main/: CMakeLists.txt  main.cpp  toggle.cpp  toggle.h  wifi.cpp  wifi.h
(+33 files in other folders)
